--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "08-restserver",
   "version": "1.0.0",
   "description": "",
-  "main": "rest-server.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon src/rest-server.js",
     "start": "node src/rest-server.js"
