Conexion a MongoDB utilizando mongo compas, mongo atlas y mongoose

--- a/.ENV
+++ b/.ENV
@@ -1,1 +1,8 @@
 PORT=3000
+
+# Conexion a mongo db
+MONGODB_CNN=mongodb+srv://user_node_cafe:carlaDavid1982@cafecluster.cenqx.mongodb.net/cafeDB
+
+# User y Pass de mongo db
+USER=user_node_cafe
+PASS=carlaDavid1982
