CRUD Productos, categorias y Sistema de busquedas

--- a/.example.env
+++ b/.example.env
@@ -3,6 +3,14 @@ PORT=3000
 # Conexion a mongo db
 MONGODB_CNN=
 
-# Clave secreta del backend
+# User y Pass de mongo db
+USER=
+PASS=
+
+# Llave secreta del backend para el JWT
 SECRETORPRIVATEKEY=
 
+
+# Llaves de uatenticación al backend con GOOGLE
+GOOGLE_CLIENT_ID=
+GOOGLE_SECRET=
