Carga de archivos y proteccion Rest y Cloudinary

--- a/.example.env
+++ b/.example.env
@@ -11,3 +11,6 @@ SECRETORPRIVATEKEY=
 # Llaves de uatenticación al backend con GOOGLE
 GOOGLE_CLIENT_ID=
 GOOGLE_SECRET=
+
+# Subir imagenes al servidor cloudinary
+CLOUDINARY_URL=
